<resources>
    <string name="app_name">Mobile Souk</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="wellcome_to_online_ordering_system">WELLCOME TO ONLINE ORDERING SYSTEM</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="submit">Submit</string>
    <string name="enter_your_otp">Enter Your OTP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="resend_otp">Resend otp?</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="add_to_wishlist">Add to wishlist</string>
    <string name="online_ordering_system">Online Ordering System</string>
    <string name="enter_otp">Please Enter OTP</string>
    <string name="enter_your_email">Enter Your Email</string>
</resources>