<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".LoginFragment">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/welcome"
                android:layout_marginTop="30dp"
                app:tint="@color/pinkColor"/>

            <androidx.cardview.widget.CardView

                android:layout_width="390dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardCornerRadius="25dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/backgroundColor"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/switch_tumbs"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/login_txt"
                                android:layout_width="0dp"
                                android:layout_height="50dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:paddingRight="15dp"
                                android:text="@string/log_in"
                                android:textAlignment="center"
                                android:textColor="@color/pinkColor"
                                android:textSize="15sp"
                                android:textStyle="bold|normal" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="50dp"
                                android:layout_weight="1"
                                android:background="@drawable/switch_trcks"
                                android:gravity="center"
                                android:paddingTop="5dp"
                                android:text="@string/register"
                                android:textAlignment="center"
                                android:textColor="@color/textColor"
                                android:textSize="15sp"
                                android:textStyle="bold|normal" />


                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/registerLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="25dp">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="25dp"
                            android:layout_marginRight="5dp"
                            android:hint="@string/name"
                            android:textColorHint="@color/pinkColor"
                            app:boxStrokeColor="#4E4A4A"
                            app:boxStrokeWidth="1dp"
                            app:shapeAppearanceOverlay="@style/Button4">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/r_name_txt"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="text"
                                android:textColor="@color/black"
                                android:textStyle="normal" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="5dp"
                            android:hint="@string/mobile_number"
                            android:textColorHint="@color/pinkColor"
                            app:boxStrokeColor="#4E4A4A"
                            app:boxStrokeWidth="1dp"
                            app:shapeAppearanceOverlay="@style/Button4">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/r_mobile_txt"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="phone"
                                android:textColor="@color/black"
                                android:textStyle="normal" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="5dp"
                            android:hint="@string/email"
                            android:textColorHint="@color/pinkColor"
                            app:boxStrokeColor="#4E4A4A"
                            app:boxStrokeWidth="1dp"
                            app:shapeAppearanceOverlay="@style/Button4">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/r_email_txt"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="textEmailAddress"
                                android:textColor="@color/black"
                                android:textStyle="normal" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="5dp"
                            android:hint="@string/password"
                            android:textColorHint="@color/pinkColor"
                            app:boxStrokeColor="#4E4A4A"
                            app:boxStrokeWidth="1dp"
                            app:endIconMode="password_toggle"
                            app:shapeAppearanceOverlay="@style/Button4">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/r_password_txt"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="textPassword"
                                android:textColor="@color/black"
                                android:textStyle="normal" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="5dp"
                            android:hint="@string/confirm_password"
                            android:textColorHint="@color/pinkColor"
                            app:boxStrokeColor="#4E4A4A"
                            app:boxStrokeWidth="1dp"
                            app:endIconMode="password_toggle"
                            app:shapeAppearanceOverlay="@style/Button4">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/r_confirmpass_txt"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="textPassword"
                                android:textColor="@color/black"
                                android:textStyle="normal" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <Button
                        android:id="@+id/generateOtp_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_gravity="end"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginBottom="20dp"
                        android:drawableRight="@drawable/baseline_arrow_forward_24"
                        android:gravity="center"
                        android:paddingLeft="30dp"
                        android:paddingRight="20dp"
                        android:text="@string/generate_otp"
                        android:textAllCaps="false"
                        android:textColor="@color/textColor"
                        android:textSize="15sp"
                        app:backgroundTint="@color/pinkColor"
                        app:shapeAppearanceOverlay="@style/Button5" />
                    <ProgressBar
                        android:id="@+id/register_progress"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:indeterminate="true"
                        android:indeterminateTint="@color/pinkColor"
                        android:indeterminateTintMode="src_in"
                        android:visibility="gone"
                        android:layout_gravity="end"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginBottom="20dp"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>